syntax = "proto3";
package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/yashagw/event-management-api/pb";

service EventManagement {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){}
}
